Add media organization and versioning
